<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Repository Search View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="RepositorySearchViewController" customModule="Stargazer" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="teX-o9-cLA">
                                <rect key="frame" x="20" y="283" width="374" height="130"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Owner" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dwG-NL-eKk">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ownerLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="uKV-uG-GKs"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" textContentType="name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repository" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yrl-Ka-mCD">
                                        <rect key="frame" x="0.0" y="70" width="374" height="60"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repositoryLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="qAU-OG-HYA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="name"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XJB-Pj-u3u">
                                <rect key="frame" x="20" y="433" width="374" height="54"/>
                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="54" id="Bgp-7s-mjk"/>
                                </constraints>
                                <color key="tintColor" systemColor="linkColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Search"/>
                                <connections>
                                    <action selector="searchRepositoryTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J5J-5E-phO"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="teX-o9-cLA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="LVV-ty-71D"/>
                            <constraint firstItem="XJB-Pj-u3u" firstAttribute="top" secondItem="teX-o9-cLA" secondAttribute="bottom" constant="20" id="R3g-UJ-cP5"/>
                            <constraint firstItem="teX-o9-cLA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="Tmq-3U-2Be"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="teX-o9-cLA" secondAttribute="trailing" constant="20" id="Yan-wI-T0Q"/>
                            <constraint firstItem="XJB-Pj-u3u" firstAttribute="trailing" secondItem="teX-o9-cLA" secondAttribute="trailing" id="mr9-CF-oSy"/>
                            <constraint firstItem="XJB-Pj-u3u" firstAttribute="leading" secondItem="teX-o9-cLA" secondAttribute="leading" id="uYQ-Kh-js6"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ownerTextField" destination="dwG-NL-eKk" id="GdR-9y-Og3"/>
                        <outlet property="repositoryTextField" destination="yrl-Ka-mCD" id="rdH-tZ-PWp"/>
                        <outlet property="searchButton" destination="XJB-Pj-u3u" id="rlC-dk-JqG"/>
                        <segue destination="Qct-D2-Vhd" kind="show" identifier="toList" id="X8c-yp-msF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="55" y="80"/>
        </scene>
        <!--List View Controller-->
        <scene sceneID="Owe-ls-eRk">
            <objects>
                <viewController id="Qct-D2-Vhd" customClass="ListViewController" customModule="Stargazer" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="R9o-1o-S7j">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vsv-2G-6wx">
                                <rect key="frame" x="20" y="10" width="374" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mDq-RG-PEf">
                                <rect key="frame" x="0.0" y="40" width="414" height="802"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="qlu-3o-FAd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="vsv-2G-6wx" firstAttribute="top" secondItem="qlu-3o-FAd" secondAttribute="top" constant="10" id="AWE-Gt-U5E"/>
                            <constraint firstItem="qlu-3o-FAd" firstAttribute="trailing" secondItem="vsv-2G-6wx" secondAttribute="trailing" constant="20" id="KUc-oi-Bjy"/>
                            <constraint firstItem="vsv-2G-6wx" firstAttribute="leading" secondItem="qlu-3o-FAd" secondAttribute="leading" constant="20" id="Pd0-Oa-XMc"/>
                            <constraint firstAttribute="bottom" secondItem="mDq-RG-PEf" secondAttribute="bottom" id="R0u-Yw-UCD"/>
                            <constraint firstItem="mDq-RG-PEf" firstAttribute="top" secondItem="vsv-2G-6wx" secondAttribute="bottom" id="puj-Wu-n0O"/>
                            <constraint firstItem="qlu-3o-FAd" firstAttribute="trailing" secondItem="mDq-RG-PEf" secondAttribute="trailing" id="rdk-up-ryq"/>
                            <constraint firstItem="mDq-RG-PEf" firstAttribute="leading" secondItem="qlu-3o-FAd" secondAttribute="leading" id="vSY-1u-RVg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="BHB-YC-R0S"/>
                    <connections>
                        <outlet property="tableView" destination="mDq-RG-PEf" id="5xb-pY-Ujf"/>
                        <outlet property="titleLabel" destination="vsv-2G-6wx" id="pPV-6i-6ed"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eAt-GZ-ERj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="854" y="94"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="linkColor">
            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemYellowColor">
            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
